Fixed the font bug

--- a/style/style.css
+++ b/style/style.css
@@ -3,7 +3,7 @@
   padding: 0;
   box-sizing: border-box;
   /* outline: 1px solid green; */
-  font-family: poppins;
+  font-family: Poppins, Helvetica, Montserrat, Nexa;
   background-color: antiquewhite;
 }
 .body-content {
